<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view_login_activity"
    style="@style/MatchParent"
    android:layout_marginLeft="@dimen/padding_start"
    android:orientation="vertical">

    <TextView
        style="@style/MatchWidth"
        android:paddingTop="@dimen/padding_actionbar"
        android:text="@string/text_welcoming_message" />

    <EditText
        android:id="@+id/userLoginEditText"
        style="@style/MatchWidth"
        android:hint="@string/username"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/userFullNameEditText"
        style="@style/MatchWidth"
        android:hint="@string/name"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:text="Login" />
</LinearLayout>