<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_background_gradient"
    android:orientation="vertical">

    <include
        android:id="@+id/topbar"
        layout="@layout/topbar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50" />

    <LinearLayout
        android:id="@+id/layoutSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbar"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@drawable/drawable_round_corner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/select_category"
            android:textColor="@color/colorAppGray"
            android:textSize="@dimen/sp_20" />

        <RadioGroup
            android:id="@+id/radioGroupVitalCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:divider="@android:drawable/bottom_bar"
            android:elevation="@dimen/dp_5"
            android:visibility="gone">

            <TableRow android:layout_width="match_parent">

                <RadioButton
                    android:id="@+id/radioBloodPressure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/blood_pressure" />

                <RadioButton
                    android:id="@+id/radioPulseRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pulse_rate" />

            </TableRow>

            <TableRow android:layout_width="match_parent">

                <RadioButton
                    android:id="@+id/radioWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weight" />

                <RadioButton
                    android:id="@+id/radioBodyComposition"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/body_composition" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <RadioButton
                    android:id="@+id/radioRespiratoryRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/respiratory_rate" />

                <RadioButton
                    android:id="@+id/radioBloodSugar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/blood_sugar" />
            </TableRow>
        </RadioGroup>

        <TextView
            android:id="@+id/selectedVital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/drawable_round_corner"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:hint="Select"
            android:padding="@dimen/dp_10"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:id="@+id/layoutDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroupVitalCategory"
            android:layout_margin="@dimen/dp_10"
            android:orientation="horizontal">

            <!--Layout Start Date-->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <EditText
                    android:id="@+id/startDate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/drawable_round_corner"
                    android:gravity="center_horizontal"
                    android:hint="@string/_03_june_2020"
                    android:padding="@dimen/dp_5"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/startDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/startDate"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/dp_2"
                    android:text="Start Date"
                    android:textColor="@color/colorAppGray"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>

            <!--Layout End Date-->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <EditText
                    android:id="@+id/endDate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/drawable_round_corner"
                    android:gravity="center_horizontal"
                    android:hint="@string/_03_june_2020"
                    android:padding="@dimen/dp_5"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/endDateLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/endDate"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/dp_2"
                    android:text="End Date"
                    android:textColor="@color/colorAppGray"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameGraph"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/layoutSetting"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@drawable/drawable_round_corner" />

    <include
        layout="@layout/bottombar_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom" />

</RelativeLayout>