<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="view"
            type="com.home.asharemedy.model.LoginViewModel" />
    </data>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true"
        android:focusableInTouchMode="true"
        tools:context=".view.LoginActivity">

        <!--Rest of your coding-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_background"
            android:gravity="center"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fillViewport="true"
                android:overScrollMode="never">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    android:padding="@dimen/dp_15">

                    <!--Welcome Note-->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/dp_10"
                        android:text="@string/login_title"
                        android:textColor="@color/colorPrimary"
                        android:visibility="gone"
                        app:fontFamily="@font/roboto" />

                    <!--Trackle Logo Layout-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/appLogo"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/sp_25"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/r_lyt_utilities"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:gravity="center"
                        android:padding="@dimen/dp_5"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/i_m_a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingBottom="@dimen/dp_10"
                            android:text="@string/i_m_a"
                            android:textColor="@color/colorLightBlack"
                            android:textSize="@dimen/sp_18"
                            android:visibility="gone" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/i_m_a"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="@dimen/dp_5">

                            <RadioButton
                                android:id="@+id/radioDoctor"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/doctor"
                                android:textSize="@dimen/sp_16" />

                            <RadioButton
                                android:id="@+id/radioPatient"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/patient"
                                android:textSize="@dimen/sp_16" />
                        </RadioGroup>

                    </RelativeLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ilUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_10"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:background="@drawable/white_border_gradient"
                            android:fontFamily="@font/roboto"
                            android:hint="@string/username"
                            android:padding="@dimen/dp_10"
                            android:textSize="@dimen/sp_16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etPasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_marginEnd="@dimen/dp_10"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:passwordToggleEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editUserPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_10"
                            android:background="@drawable/white_border_gradient"
                            android:fontFamily="@font/roboto"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="@dimen/dp_10"
                            android:textSize="@dimen/sp_16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="@dimen/dp_10"
                            android:checked="false"
                            android:fontFamily="@font/roboto"
                            android:layoutDirection="rtl"
                            android:text="@string/remember_me"
                            android:textColor="@color/colorLightBlack"
                            android:visibility="gone"
                            app:switchPadding="8dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtForgotPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="@dimen/dp_10"
                            android:fontFamily="@font/roboto"
                            android:text="@string/forgot_password"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/sp_14" />
                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLogin"
                        android:layout_width="200dp"
                        android:layout_height="@dimen/dp_40"
                        android:layout_marginTop="@dimen/dp_10"
                        android:background="@drawable/rounded_corner_blue"
                        android:fontFamily="@font/roboto"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp_18" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_5"
                        android:layout_marginTop="@dimen/dp_60"
                        android:fontFamily="@font/roboto"
                        android:padding="@dimen/dp_10"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="@dimen/dp_30"
                        android:gravity="center|bottom"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_6">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/dp_3"
                            android:fontFamily="@font/roboto"
                            android:text="@string/privacy_plicy_terms_conditions"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/sp_10" />

                        <ImageView
                            android:layout_width="@dimen/dp_100"
                            android:layout_height="@dimen/dp_30"
                            android:src="@drawable/ic_info"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </RelativeLayout>
</layout>